# 2022-MUSI6106

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-tests.yml  cmake.yml
Fft/Fft.dir/Debug/: libFft.lib.recipe
Fft/Fft.dir/Debug/Fft.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Fft.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Matlab/: FIR.asv  FIR.m  IIR.m  sweep.wav_delay.txt
audio/: sweep.wav_blockSize_1.txt  sweep.wav_blockSize_2.txt
googletest/: CTestTestfile.cmake
googletest/googletest/: CTestTestfile.cmake
inc/: MUSI6106Config.h
src/: doxy.config.in
src/AudioFileIO/: CMakeLists.txt
src/CombFilter/: CombFilter.cpp  CombFilter.h  CombFilterIf.cpp
src/Dtw/: CMakeLists.txt  Dtw.cpp
src/FastConv/: CMakeLists.txt  FastConv.cpp
src/Fft/: CMakeLists.txt  Fft.cpp
src/MUSI6106Exec/: CMakeLists.txt  MUSI6106Exec.cpp
src/Tests/TestExec/: CMakeLists.txt
src/Tests/Tests/: Test_AudioIO.cpp  Test_CombFilter.cpp  Test_Dtw.cpp  Test_FastConv.cpp  Test_Fft.cpp  Test_Vibrato.cpp
src/Vibrato/: Vibrato.cpp
src/inc/: CombFilter.h  CombFilterIf.h  Dtw.h  FastConv.h  Fft.h  Lfo.h  RingBuffer.h  Synthesis.h  Vector.h  Vibrato.h
